--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
+    "redux-saga": "^1.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -21,7 +22,10 @@
     "watch": "npm-watch"
   },
   "watch": {
-    "build": ["src/", "public/"]
+    "build": [
+      "src/",
+      "public/"
+    ]
   },
   "eslintConfig": {
     "extends": [
